@@ -1,2 +1,2 @@
-/Dancer-SessionFactory-MongoDB*
+/Dancer2-Session-MongoDB*
 .build
