@@ -2,11 +2,11 @@
 
 =head1 NAME
 
-Dancer::SessionFactory::MongoDB - Dancer 2 session storage with MongoDB
+Dancer2::Session::MongoDB - Dancer 2 session storage with MongoDB
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
@@ -50,7 +50,7 @@ configuring authentication, replication, etc.
 =head2 Bugs / Feature Requests
 
 Please report any bugs or feature requests through the issue tracker
-at L<https://github.com/dagolden/dancer-sessionfactory-mongodb/issues>.
+at L<https://github.com/dagolden/dancer2-session-mongodb/issues>.
 You will be notified automatically of any progress on your issue.
 
 =head2 Source Code
@@ -58,9 +58,9 @@ You will be notified automatically of any progress on your issue.
 This is open source software.  The code repository is available for
 public review and contribution under the terms of the license.
 
-L<https://github.com/dagolden/dancer-sessionfactory-mongodb>
+L<https://github.com/dagolden/dancer2-session-mongodb>
 
-  git clone git://github.com/dagolden/dancer-sessionfactory-mongodb.git
+  git clone git://github.com/dagolden/dancer2-session-mongodb.git
 
 =head1 AUTHOR
 
