@@ -1,4 +1,4 @@
-name    = Dancer-SessionFactory-MongoDB
+name    = Dancer2-Session-MongoDB
 author  = David Golden <dagolden@cpan.org>
 license = Apache_2_0
 copyright_holder = David Golden
@@ -10,4 +10,4 @@ AutoMetaResources.bugtracker.rt = 0
 AutoMetaResources.bugtracker.github = user:dagolden
 
 [Prereqs]
-Dancer = 1.999999
+Dancer2 = 2
