@@ -153,7 +153,7 @@ Test::TCP::test_tcp(
     server => sub {
         my $port = shift;
 
-        use Dancer;
+        use Dancer2;
 
         get '/no_session_data' => sub {
             return "session not modified";
@@ -208,7 +208,7 @@ Test::TCP::test_tcp(
             port         => $port
         );
 
-        Dancer->runner->server->port($port);
+        Dancer2->runner->server->port($port);
         start;
     },
 );
