@@ -1,8 +1,13 @@
-Revision history for Dancer-SessionFactory-MongoDB
+Revision history for Dancer2-Session-MongoDB
 
 {{$NEXT}}
 
+    - Renamed from Dancer-SessionFactory-MongoDB to
+      Dancer2-Session-MongoDB
+     
+    - Internals updated for new Dancer2 release
+
 0.001     2013-01-24 20:07:45 America/New_York
 
-  - First release
+    - First release
 
